# k8s-troubleshooter

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fix_kubeconfig.py  pyproject.toml  requirements.txt  setup_local_kubeconfig.py  start.sh
.github/workflows/: ci.yml
app/: main.py  run.py
app/agent/: agent.py  memory.py  prompts.py  reasoning.py
app/models/: bedrock.py
app/services/: kubernetes.py  stackoverflow.py
app/tools/: cluster.py  events.py  pod.py  stackoverflow.py
scenarios/: crashloop.yaml  imagepull.yaml  oom.yaml  pending.yaml
tests/: test_agent.py  test_api.py  test_kubernetes.py
ui/: app.py
