[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kubernetes-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "strands-agents",
    "boto3",
    "kubernetes",
    "requests",
    "streamlit",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "httpx"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
